# vigil-summit-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  render.yaml
apps/ai-orchestrator/: .env.example  Dockerfile  pyproject.toml
apps/ai-orchestrator/src/flowpilot_ai_orchestrator/: benchmark.py  config.py  main.py  schemas.py  service.py
apps/ai-orchestrator/src/flowpilot_ai_orchestrator/clients/: __init__.py  credentials.py
apps/ai-orchestrator/src/flowpilot_ai_orchestrator/providers/: __init__.py  base.py  registry.py
apps/ai-orchestrator/src/flowpilot_ai_orchestrator/providers/anthropic/: __init__.py  provider.py
apps/ai-orchestrator/src/flowpilot_ai_orchestrator/providers/deterministic/: __init__.py  provider.py
apps/ai-orchestrator/src/flowpilot_ai_orchestrator/providers/openai/: __init__.py  provider.py
apps/ai-orchestrator/src/flowpilot_ai_orchestrator/providers/openrouter/: __init__.py  provider.py
apps/ai-orchestrator/src/flowpilot_ai_orchestrator/providers/utils/: __init__.py  chat_messages.py  response_parsing.py  token_estimation.py
apps/ai-orchestrator/tests/api/: test_health.py  test_prompt_run.py  test_prompt_validation.py
apps/ai-orchestrator/tests/fixtures/: prompt_run_request.json  prompt_run_response.json
apps/ai-orchestrator/tests/unit/: test_anthropic_provider.py  test_credential_client.py  test_deterministic_provider.py  test_openai_provider.py  test_openrouter_provider.py  test_provider_registry.py  test_provider_utils.py
docs/: AI_ORCHESTRATOR.md  (+8 more)
(+221 files in other folders)
