[project]
name = "flowpilot-ai-orchestrator"
version = "0.1.0"
description = "FlowPilot AI Orchestrator service"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "httpx>=0.27.0",
  "openai>=1.84.0",
  "anthropic>=0.105.0,<1.0.0",
]

[project.scripts]
flowpilot-ai-benchmark = "flowpilot_ai_orchestrator.benchmark:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
